updated chatter, q text and fixed spacing issue that bugged me

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -368,6 +368,10 @@ h1 {
 
     .bio {
       font-size: 18px;
+
+      @media @mobile {
+        padding-top: 15px;
+      }
     }
   }
 }
